# financeai

./: .gitignore  README.md  generate_showcase.py  pyproject.toml
financeai/: __init__.py  __main__.py  artwork.py  cli.py  config.py  hermes_bridge.py  lookup.py  scrambler.py
showcase/: FinanceAI.lnk  client_list.xlsx  launch_financeai.bat  launch_financeai.sh  ~$client_list.xlsx
