[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "financeai"
version = "0.1.0"
description = "Secure PII-scrambling CLI for financial data analysis with Hermes AI"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Overgrowth AI" },
]
dependencies = [
    "requests>=2.28.0",
]

[project.scripts]
financeai = "financeai.cli:main"

[tool.setuptools.packages.find]
include = ["financeai*"]
